@@ -60,7 +60,7 @@ librcsc_geom_la_LIBADD = \
 #	tetgen/librcsc_geom_tetgen.la
 
 
-librcsc_geom_la_LDFLAGS = -version-info 7:0:0
+librcsc_geom_la_LDFLAGS = -version-info 8:0:1
 #libXXXX_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
 #    1. Start with version information of `0:0:0' for each libtool library.
 #
